force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__ActionDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ActionDescription__c</fullName>
    <label>Action Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>