force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__ConvertionTypeReward__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ConvertionTypeReward__c</fullName>
    <label>Convertion Type Reward</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fix Value</fullName>
            </value>
            <value>
                <fullName>Reward Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>