force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__ConvertionTypeTransaction__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ConvertionTypeTransaction__c</fullName>
    <label>Convertion Type Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fix Value</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>Multiplier</fullName>
                <default>true</default>
                <label>Multiplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>