force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__ExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExpirationMonth__c</fullName>
    <description>The number of months during which the points created by this rule will be valid.</description>
    <inlineHelpText>Enter the number of months during which the points created by the rule will remain vaild.</inlineHelpText>
    <label>Months untill Expiration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>