force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__FieldNameTransaction__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FieldNameTransaction__c</fullName>
    <defaultValue>"Value__c"</defaultValue>
    <label>Field Name Transaction</label>
    <length>80</length>
    <type>Text</type>
</CustomField>