force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this option will make the rule active.</description>
    <inlineHelpText>Check this option in order to activate this rule.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>