force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The program to which this rule belongs.</description>
    <inlineHelpText>Select the program to which this rule belongs.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloEE__Program__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>