force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__StockControl__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__StockControl__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this option will make that a transaction is not processed if its reward is out of stock. If left unchecked, the transaction will be processed although the reward can not be delivered.</description>
    <inlineHelpText>Check this option if you want that a transaction is not processed when its reward is out of stock.</inlineHelpText>
    <label>Stock Control</label>
    <type>Checkbox</type>
</CustomField>