force-app/main/default/objects/FieloEE__Rule__c/recordTypes/FieloEE__Default_Rule.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Default_Rule</fullName>
    <active>true</active>
    <label>Default Rule</label>
</RecordType>