force-app/main/default/objects/FieloEE__Rule__c/recordTypes/FieloEE__Standard_Rule.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Standard_Rule</fullName>
    <active>true</active>
    <label>Standard Rule</label>
</RecordType>