force-app/main/default/objects/FieloEE__Rule__c/validationRules/FieloEE__ModifyProgram.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__ModifyProgram</fullName>
    <active>true</active>
    <description>Is not possible to modify the associated Program</description>
    <errorConditionFormula>ISCHANGED(FieloEE__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloEE__Program__c)))</errorConditionFormula>
    <errorDisplayField>FieloEE__Program__c</errorDisplayField>
    <errorMessage>Is not possible to modify the associated Program</errorMessage>
</ValidationRule>