force-app/main/default/objects/FieloEE__Rule__c/validationRules/FieloEE__Rule_Name_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Rule_Name_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name must be completed</errorMessage>
</ValidationRule>