force-app/main/default/objects/FieloEE__Rule__c/listViews/FieloEE__All_Rules.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Rules</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Description__c</columns>
    <columns>FieloEE__IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Rules</label>
    <language>en_US</language>
</ListView>